--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-  "name": "1.4.7-challenge-blog-api",
+  "name": "mongoose-challenge",
   "version": "1.0.0",
-  "description": "Blog API ========",
+  "description": "[See notes](https://johnvincent.io/blog/mongoose-blog-app/)",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "test": "mocha ./test"
+  "directories": {
+    "test": "test"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "express": "^4.15.2",
+    "mongoose": "^4.9.5",
     "morgan": "^1.8.1",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
     "mocha": "^3.2.0"
-  }
+  },
+  "scripts": {
+    "test": "mocha ./test",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/johnvincentio/mongoose-challenge.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/johnvincentio/mongoose-challenge/issues"
+  },
+  "homepage": "https://github.com/johnvincentio/mongoose-challenge#readme"
 }
